Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8216349 | 13 | Erik Österlund | P2 | Resolved | Fixed | b03 |
JDK-8216301 | 12.0.1 | Erik Österlund | P2 | Resolved | Fixed | b02 |
[glue.process.err] [stress.process.err] # To suppress the following error report, specify this argument
[glue.process.err] [stress.process.err] # after -XX: or in .hotspotrc: SuppressErrorAt=/zBarrier.cpp:48
[glue.process.out] [stress.process.out] #
[glue.process.out] [stress.process.out] # A fatal error has been detected by the Java Runtime Environment:
[glue.process.out] [stress.process.out] #
[glue.process.out] [stress.process.out] # Internal Error (/scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S67208/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/ddcf3b8d-40a0-4dca-a5e9-011bfc4936e1/runs/12dca414-ce5a-40e9-8bd0-974f7d3a58f5/workspace/open/src/hotspot/share/gc/z/zBarrier.cpp:48), pid=10428, tid=10479
[glue.process.out] [stress.process.out] # assert(ZAddress::is_marked(addr)) failed: Should be marked
[glue.process.out] [stress.process.out] #
[glue.process.out] [stress.process.out] # JRE version: Java(TM) SE Runtime Environment (13.0) (fastdebug build 13-internal+0-jdk13-jdk.35)
[glue.process.out] [stress.process.out] # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 13-internal+0-jdk13-jdk.35, mixed mode, tiered, z gc, linux-amd64)
[glue.process.out] [stress.process.out] # Problematic frame:
[glue.process.out] [stress.process.out] # V [libjvm.so+0x190a59b] unsigned long ZBarrier::mark<false, true>(unsigned long)+0xab
[glue.process.out] [stress.process.out] #
[glue.process.out] [stress.process.out] # Core dump will be written. Default location: /scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S1237/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7f30a5b4-f4a5-455b-9a52-6b3a94bcdc7f/runs/e47ed50e-54d2-4f9f-8632-d196f3a5a57f/testOutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink_java/scratch/0/core.10428
[glue.process.out] [stress.process.out] #
[glue.process.out] [stress.process.out] # An error report file with more information is saved as:
[glue.process.out] [stress.process.out] # /scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S1237/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7f30a5b4-f4a5-455b-9a52-6b3a94bcdc7f/runs/e47ed50e-54d2-4f9f-8632-d196f3a5a57f/testOutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink_java/scratch/0/hs_err_pid10428.log
[glue.process.err[glue.process.out] [stress.process.out] #
[glue.process.err] [stress.process.err] # after -XX: or in .hotspotrc: SuppressErrorAt=/zBarrier.cpp:48
[glue.process.out] [stress.process.out] #
[glue.process.out] [stress.process.out] # A fatal error has been detected by the Java Runtime Environment:
[glue.process.out] [stress.process.out] #
[glue.process.out] [stress.process.out] # Internal Error (/scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S67208/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/ddcf3b8d-40a0-4dca-a5e9-011bfc4936e1/runs/12dca414-ce5a-40e9-8bd0-974f7d3a58f5/workspace/open/src/hotspot/share/gc/z/zBarrier.cpp:48), pid=10428, tid=10479
[glue.process.out] [stress.process.out] # assert(ZAddress::is_marked(addr)) failed: Should be marked
[glue.process.out] [stress.process.out] #
[glue.process.out] [stress.process.out] # JRE version: Java(TM) SE Runtime Environment (13.0) (fastdebug build 13-internal+0-jdk13-jdk.35)
[glue.process.out] [stress.process.out] # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 13-internal+0-jdk13-jdk.35, mixed mode, tiered, z gc, linux-amd64)
[glue.process.out] [stress.process.out] # Problematic frame:
[glue.process.out] [stress.process.out] # V [libjvm.so+0x190a59b] unsigned long ZBarrier::mark<false, true>(unsigned long)+0xab
[glue.process.out] [stress.process.out] #
[glue.process.out] [stress.process.out] # Core dump will be written. Default location: /scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S1237/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7f30a5b4-f4a5-455b-9a52-6b3a94bcdc7f/runs/e47ed50e-54d2-4f9f-8632-d196f3a5a57f/testOutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink_java/scratch/0/core.10428
[glue.process.out] [stress.process.out] #
[glue.process.out] [stress.process.out] # An error report file with more information is saved as:
[glue.process.out] [stress.process.out] # /scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S1237/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7f30a5b4-f4a5-455b-9a52-6b3a94bcdc7f/runs/e47ed50e-54d2-4f9f-8632-d196f3a5a57f/testOutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink_java/scratch/0/hs_err_pid10428.log
[glue.process.err[glue.process.out] [stress.process.out] #
- backported by
-
JDK-8216301 applications/kitchensink/Kitchensink.java crash with "assert(ZAddress::is_marked(addr)) failed: Should be marked"
-
- Resolved
-
-
JDK-8216349 applications/kitchensink/Kitchensink.java crash with "assert(ZAddress::is_marked(addr)) failed: Should be marked"
-
- Resolved
-